--- a/.github/workflows/publish_value_ring_suite.yml
+++ b/.github/workflows/publish_value_ring_suite.yml
@@ -114,6 +114,10 @@ jobs:
               if n_decoys > 0:
                   rows_with_decoys += 1
           share = (rows_with_decoys / total) if total else 0.0
+
+          ok_rows = [r for r in rows if str(r.get("status", "")).strip() == "OK"]
+          ok_total = len(ok_rows)
+          strategy_counts_ok = Counter((str(r.get("decoy_strategy_used", "")).strip() or "UNKNOWN") for r in ok_rows)
           
           lines = []
           lines.append(f"  - rows_total: {total}")
@@ -128,6 +132,13 @@ jobs:
           else:
               lines.append("  - top_skip_reasons: (none)")
           lines.append(f"  - share_rows_with_n_decoys_gt_0: {share:.3f} ({share*100:.1f}%)")
+          if ok_total:
+              lines.append("  - decoy_strategy_used_distribution_ok:")
+              for strategy_id, cnt in strategy_counts_ok.most_common():
+                  pct = (cnt / ok_total) * 100.0
+                  lines.append(f"    - {strategy_id}: {cnt} ({pct:.1f}%)")
+          else:
+              lines.append("  - decoy_strategy_used_distribution_ok: (none)")
           
           facts_md = "\n".join(lines) + "\n"
           Path("out_ring_suite/value_ring_suite_facts.md").write_text(facts_md, encoding="utf-8")
@@ -139,6 +150,42 @@ jobs:
                   f.write("facts_md<<EOF\n")
                   f.write(facts_md)
                   f.write("EOF\n")
+          PY
+
+      - name: "Gate: decoy coverage must be >= 0.95"
+        run: |
+          python - << 'PY'
+          import csv
+          from pathlib import Path
+          
+          summary_path = Path("out_ring_suite/summary.csv")
+          rows = list(csv.DictReader(summary_path.read_text(encoding="utf-8").splitlines()))
+          total = len(rows)
+          
+          rows_with_decoys = 0
+          for r in rows:
+              raw = str(r.get("n_decoys", "")).strip()
+              try:
+                  n_decoys = int(raw) if raw else 0
+              except ValueError:
+                  n_decoys = 0
+              if n_decoys > 0:
+                  rows_with_decoys += 1
+          
+          share = (rows_with_decoys / total) if total else 0.0
+          no_decoys_generated = 0
+          for r in rows:
+              status = str(r.get("status", "")).strip()
+              if status != "SKIP":
+                  continue
+              reason = (str(r.get("reason", "")).strip() or str(r.get("skip_reason", "")).strip())
+              if reason == "no_decoys_generated":
+                  no_decoys_generated += 1
+          
+          assert share >= 0.95, f"Gate-Ring-Suite-Decoy-Coverage failed: share={share:.3f} (<0.95)"
+          assert no_decoys_generated <= 10, f"Gate-Ring-Suite-Decoy-Coverage failed: no_decoys_generated={no_decoys_generated} (>10)"
+          print(f"Gate OK: share_rows_with_n_decoys_gt_0={share:.3f} (>=0.95)")
+          print(f"Gate OK: no_decoys_generated={no_decoys_generated} (<=10)")
           PY
 
       - name: Compute SHA256
