--- a/.github/workflows/publish_value_ring_suite.yml
+++ b/.github/workflows/publish_value_ring_suite.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Validate tag format
         run: |
-          echo "${{ inputs.tag }}" | grep -E '^value-ring-suite-[0-9]{4}-[0-9]{2}-[0-9]{2}$'
+          echo "${{ inputs.tag }}" | grep -E '^value-ring-suite-[0-9]{4}-[0-9]{2}-[0-9]{2}(-m1_1(-r[0-9]+)?)?$'
 
       - uses: actions/setup-python@v5
         with:
